feat: add real-time file watchdog with notify
Real-time file monitoring:
- Add notify and crossbeam-channel dependencies
- Create file_watcher module with FileWatcher struct
- Support 4 events: CREATE, MODIFY, RENAME, REMOVE
- Process events every frame for low latency

Index operations:
- Add delete_file_by_path() to remove files from index
- Add update_file_path() for renames/moves
- Add update_file() for modifications
- All operations use Term-based deletion for precision

Integration:
- Add watchdog_enabled and watchdog_update_count to XFinderApp
- Call process_watchdog_events() every frame
- Auto-repaint when watchdog active for continuous monitoring
- UI toggle: "Activer/Desactiver" with update counter

Security & Performance:
- Validate paths before watching
- Batch events with crossbeam channel (1000 buffer)
- Non-blocking poll with try_recv()
- Graceful error handling (no panic)

3 new tests added:
- test_watcher_creation
- test_watch_path
- test_file_creation_event

All 14 tests passing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ rusqlite = { version = "0.32", features = ["bundled"] }
 
 # === Filesystem ===
 walkdir = "2.4"
+notify = "6.1"
+crossbeam-channel = "0.5"
 
 # === Utils ===
 anyhow = "1.0"
