--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 eframe = "0.27"
 egui = "0.27"
 rfd = "0.14"
+image = "0.24"
 
 # === Search (Tantivy - comme spotlight_windows) ===
 tantivy = "0.22"
