--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ anyhow = "1.0"
 chrono = "0.4"
 dirs = "5.0"
 opener = "0.7"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
 
 # === Media ===
 rodio = "0.17"
