docs: simplify README and add MIT license
Simplify README to be more concise and focused:
- Remove detailed roadmap (kept in separate docs)
- Remove architecture diagrams
- Remove excessive details
- Focus on current features only
- Add french descriptions
- Add configuration example

Add MIT license:
- Create LICENSE file
- Update Cargo.toml with license metadata
- Add repository and description fields

README now ~100 lines vs 267 lines before

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "xfinder"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "Moteur de recherche de fichiers ultra-rapide avec surveillance temps réel"
+repository = "https://github.com/your-org/xfinder"
 
 [dependencies]
 # === UI (egui natif) ===
