--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT"
 description = "Moteur de recherche de fichiers ultra-rapide avec surveillance temps réel"
-repository = "https://github.com/your-org/xfinder"
+repository = "https://github.com/fless-lab/xfinder"
+authors = ["fless-lab"]
 
 [dependencies]
 # === UI (egui natif) ===
