license: change to custom non-commercial license
Replace MIT with custom license that prohibits resale and commercial use:

Changes:
- Prohibit selling the software or derivative works
- Prohibit commercial use (SaaS, paid services, etc.)
- Allow free personal use
- Allow modifications and distribution (non-commercial)
- Require attribution
- Add contact for commercial licensing inquiries

Update Cargo.toml:
- Change from 'license = MIT' to 'license-file = LICENSE'
- Update author to full name

Update README:
- Replace MIT mention with custom license summary
- Clarify permissions and restrictions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "xfinder"
 version = "0.1.0"
 edition = "2021"
-license = "MIT"
+license-file = "LICENSE"
 description = "Moteur de recherche de fichiers ultra-rapide avec surveillance temps réel"
 repository = "https://github.com/fless-lab/xfinder"
-authors = ["fless-lab"]
+authors = ["Abdou-Raouf ATARMLA"]
 
 [dependencies]
 # === UI (egui natif) ===
