feat: Phase 1 improvements - fuzzy search, blake3 hashing, global hotkey, pause/resume
Major Phase 1 enhancements completed in this commit:

## SE-003: Fuzzy matching (Levenshtein distance)
- Add fuzzy_search and fuzzy_distance fields to SearchOptions
- Implement FuzzyTermQuery in Tantivy (distance 0-2)
- UI: Checkbox "Fuzzy (tolérer fautes)" + distance slider
- Files: src/search/tantivy_index.rs, src/app.rs, src/ui/main_panel.rs

## I-003: Blake3 hashing for duplicate detection
- Create src/hash.rs module with hash_file() and hash_file_fast()
- Calculate hash automatically during indexing
- Add find_duplicates() and count_duplicates() in database
- Dependency: blake3 = "1.5"
- Files: src/hash.rs (new), src/app.rs, src/database/queries.rs

## UI-007: Global hotkey Ctrl+Shift+F
- Create src/system/hotkey.rs with HotkeyManager
- Register Ctrl+Shift+F at system level
- Auto-restore window from tray when hotkey pressed
- Dependency: global-hotkey = "0.5"
- Files: src/system/hotkey.rs (new), src/app.rs

## I-008: Pause/resume indexing
- Add indexing_paused: Arc<AtomicBool> for thread-safe control
- Check pause state in indexing loop (sleep 100ms if paused)
- Methods: pause_indexing(), resume_indexing(), is_indexing_paused()
- UI: "⏸ Pause" / "▶ Reprendre" button in side panel
- Files: src/app.rs, src/ui/side_panel.rs

## TS-006: Performance benchmarks
- Batch inserts: 70k-84k files/sec (~14ms for 1000 files)
- Single inserts: 20k-24k files/sec (~50ms for 1000 files)
- Count 10k files: 48-114 µs
- Stats aggregation: 783-1034 µs (< 1ms)
- Get by path (indexed): 34-47 µs

## Documentation
- Add PHASE1_PROGRESS.md with detailed progress tracking
- 5 tasks completed, ~500 LOC added
- All tests passing (35 tests)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ crossbeam-channel = "0.5"
 # === Utils ===
 anyhow = "1.0"
 chrono = "0.4"
+blake3 = "1.5"
 dirs = "5.0"
 opener = "0.7"
 serde = { version = "1.0", features = ["derive"] }
@@ -36,6 +37,7 @@ toml = "0.8"
 # === System Integration ===
 tray-icon = "0.14"
 tokio = { version = "1", features = ["rt", "time", "macros"] }
+global-hotkey = "0.5"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52"
