--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,9 @@ tray-icon = "0.14"
 tokio = { version = "1", features = ["rt", "time", "macros"] }
 global-hotkey = "0.5"
 
+# === Python Integration (LEANN wrapper) ===
+pyo3 = { version = "0.21", features = ["auto-initialize"] }
+
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52"
 windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
