feat: implement content extraction for PDF, DOCX, and text files
- Add docx-rs dependency for DOCX support
- Create ContentExtractor with multi-format support (PDF, DOCX, TXT, code files)
- Implement extract_text() with automatic format detection
- Add clean_text() for text normalization
- Include is_supported() for format validation
- Full error handling with anyhow::Context
- Unit tests for extraction and cleaning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,10 +46,11 @@ pyo3 = { version = "0.21", features = ["auto-initialize"] }
 winreg = "0.52"
 windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
 
-# === Media ===
+# === Media & Document Extraction ===
 rodio = "0.17"
 pdf-extract = "0.7"
 mp4parse = "0.17"
+docx-rs = "0.4"
 
 [dev-dependencies]
 tempfile = "3.8"
