--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,15 +42,15 @@ global-hotkey = "0.5"
 # === Python Integration (LEANN wrapper) ===
 pyo3 = { version = "0.21", features = ["auto-initialize"] }
 
+# === Media & Document Extraction ===
+rodio = "0.17"
+pdf_extract = { package = "pdf-extract", version = "0.7" }
+mp4parse = "0.17"
+dotext = "0.1"
+
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52"
 windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
-
-# === Media & Document Extraction ===
-rodio = "0.17"
-pdf-extract = "0.7"
-mp4parse = "0.17"
-docx-rs = "0.4"
 
 [dev-dependencies]
 tempfile = "3.8"
